--- a/i18n/en.json
+++ b/i18n/en.json
@@ -405,6 +405,60 @@
   "albums": "Albums",
   "albums_count": "{count, plural, one {{count, number} Album} other {{count, number} Albums}}",
   "dynamic_albums": "Dynamic Albums",
+  "dynamic_album": "Dynamic Album",
+  "create_dynamic_album": "Create Dynamic Album",
+  "edit_dynamic_album": "Edit Dynamic Album",
+  "share_dynamic_album": "Share Dynamic Album",
+  "dynamic_album_name_placeholder": "Enter dynamic album name",
+  "dynamic_album_description_placeholder": "Enter description (optional)",
+  "create_dynamic_album_description": "Dynamic albums automatically display photos based on tags you select. Choose tags and the album will always show the latest photos matching those tags.",
+  "edit_dynamic_album_description": "Edit the name and tag filters for this dynamic album. The album will automatically update to show photos matching the selected tags.",
+  "dynamic_album_created": "Dynamic album '{album}' created successfully",
+  "dynamic_album_updated": "Dynamic album '{album}' updated successfully",
+  "enter_album_name": "Enter album name",
+  "select_tags_to_create_dynamic_album": "Select tags to create a dynamic album",
+  "select_tags_for_dynamic_album": "Select tags for the dynamic album",
+  "dynamic_album_share_no_users": "No users available to share with",
+  "role_editor": "Editor",
+  "role_viewer": "Viewer",
+  "remove_user": "Remove user",
+  "filters": "Filters",
+  "add_filter": "Add Filter",
+  "no_filters_added": "No filters added yet",
+  "filter_value_placeholder": "Enter filter value",
+  "and": "AND",
+  "or": "OR",
+  "asset_type": "Asset Type",
+  "date_range": "Date Range",
+  "metadata": "Metadata",
+  "location": "Location",
+  "select_permission": "Select Permission",
+  "shared_users": "Shared Users",
+  "add_users": "Add Users",
+  "dynamic_album_shared_successfully": "Dynamic album shared successfully",
+  "no_dynamic_albums_message": "No dynamic albums found",
+  "has_filters": "Has filters",
+  "search_dynamic_albums": "Search dynamic albums",
+  "items": "items",
+  "by": "by",
+  "created": "created",
+  "no_assets_found": "No assets found",
+  "showing_first_n_items": "Showing first {count} of {total} items",
+  "filter_type_tag": "Tag Filter",
+  "operator_and": "AND",
+  "operator_or": "OR",
+  "tags": "tags",
+  "failed_to_load_dynamic_albums": "Failed to load dynamic albums",
+  "failed_to_load_shared_dynamic_albums": "Failed to load shared dynamic albums",
+  "failed_to_create_dynamic_album": "Failed to create dynamic album",
+  "failed_to_load_dynamic_album": "Failed to load dynamic album",
+  "failed_to_update_dynamic_album": "Failed to update dynamic album",
+  "failed_to_delete_dynamic_album": "Failed to delete dynamic album",
+  "failed_to_load_dynamic_album_assets": "Failed to load dynamic album assets",
+  "failed_to_load_dynamic_album_asset_count": "Failed to load dynamic album asset count",
+  "failed_to_share_dynamic_album": "Failed to share dynamic album",
+  "failed_to_update_dynamic_album_share": "Failed to update dynamic album share",
+  "failed_to_remove_dynamic_album_share": "Failed to remove dynamic album share",
   "albums_default_sort_order": "Default album sort order",
   "albums_default_sort_order_description": "Initial asset sort order when creating new albums.",
   "albums_feature_description": "Collections of assets that can be shared with other users.",
@@ -1964,5 +2018,17 @@
   "yes": "Yes",
   "you_dont_have_any_shared_links": "You don't have any shared links",
   "your_wifi_name": "Your Wi-Fi name",
-  "zoom_image": "Zoom Image"
+  "zoom_image": "Zoom Image",
+  "dynamic_albums": "Dynamic Albums",
+  "create_dynamic_album": "Create Dynamic Album",
+  "edit_dynamic_album": "Edit Dynamic Album",
+  "dynamic_album_name_placeholder": "Enter dynamic album name",
+  "dynamic_album_description_placeholder": "Enter description (optional)",
+  "select_tags": "Select Tags",
+  "selected_tags": "Selected Tags",
+  "search_tags": "Search tags...",
+  "remove_tag": "Remove tag",
+  "errors.failed_to_load_tags": "Failed to load tags",
+  "errors.failed_to_create_dynamic_album": "Failed to create dynamic album",
+  "errors.failed_to_update_dynamic_album": "Failed to update dynamic album"
 }
