--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -1955,5 +1955,18 @@
   "yes": "Oui",
   "you_dont_have_any_shared_links": "Vous n'avez aucun lien partagé",
   "your_wifi_name": "Nom du réseau wifi",
-  "zoom_image": "Zoomer"
+  "zoom_image": "Zoomer",
+  "dynamic_albums": "Albums dynamiques",
+  "create_dynamic_album": "Créer un album dynamique",
+  "edit_dynamic_album": "Modifier l'album dynamique",
+  "dynamic_album_name_placeholder": "Entrez le nom de l'album dynamique",
+  "dynamic_album_description_placeholder": "Entrez une description (optionnel)",
+  "select_tags": "Sélectionner les étiquettes",
+  "selected_tags": "Étiquettes sélectionnées",
+  "search_tags": "Rechercher des étiquettes...",
+  "remove_tag": "Supprimer l'étiquette",
+  "errors.failed_to_load_tags": "Échec du chargement des étiquettes",
+  "errors.failed_to_create_dynamic_album": "Échec de la création de l'album dynamique",
+  "errors.failed_to_update_dynamic_album": "Échec de la mise à jour de l'album dynamique",
+  "unnamed_dynamic_album": "Album dynamique sans nom"
 }
