--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -140,7 +140,7 @@
     "machine_learning_smart_search_description": "Rechercher des images de manière sémantique en utilisant les intégrations CLIP",
     "machine_learning_smart_search_enabled": "Activer la recherche intelligente",
     "machine_learning_smart_search_enabled_description": "Si cette option est désactivée, les images ne seront pas encodées pour la recherche intelligente.",
-    "machine_learning_url_description": "L’URL du serveur d'apprentissage automatique. Si plusieurs URL sont fournies, chaque serveur sera essayé un par un jusqu’à ce que l’un d’eux réponde avec succès, dans l’ordre de la première à la dernière. Les serveurs ne répondant pas seront temporairement ignorés jusqu'à ce qu'ils soient de nouveau opérationnels.",
+    "machine_learning_url_description": "L'URL du serveur d'apprentissage automatique. Si plusieurs URL sont fournies, chaque serveur sera essayé un par un jusqu'à ce que l'un d'eux réponde avec succès, dans l'ordre de la première à la dernière. Les serveurs ne répondant pas seront temporairement ignorés jusqu'à ce qu'ils soient de nouveau opérationnels.",
     "manage_concurrency": "Gérer du multitâche",
     "manage_log_settings": "Gérer les paramètres de journalisation",
     "map_dark_style": "Thème sombre",
@@ -252,11 +252,11 @@
     "system_settings": "Paramètres du système",
     "tag_cleanup_job": "Nettoyage des étiquettes",
     "template_email_available_tags": "Vous pouvez utiliser les variables suivantes dans votre modèle : {tags}",
-    "template_email_if_empty": "Si le modèle est vide, l’e-mail par défaut sera utilisé.",
+    "template_email_if_empty": "Si le modèle est vide, l'e-mail par défaut sera utilisé.",
     "template_email_invite_album": "Modèle d'invitation à un album",
     "template_email_preview": "Prévisualiser",
     "template_email_settings": "Modèles de courriel",
-    "template_email_update_album": "Mettre à jour le modèle d’album",
+    "template_email_update_album": "Mettre à jour le modèle d'album",
     "template_email_welcome": "Modèle de courriel de bienvenue",
     "template_settings": "Modèles de notifications",
     "template_settings_description": "Gérer les modèles personnalisés pour les notifications",
@@ -791,7 +791,7 @@
   "edit_date": "Modifier la date",
   "edit_date_and_time": "Modifier la date et l'heure",
   "edit_description": "Modifier la description",
-  "edit_description_prompt": "Choisir une nouvelle description :",
+  "edit_description_prompt": "Choisir une nouvelle description :",
   "edit_exclusion_pattern": "Modifier le schéma d'exclusion",
   "edit_faces": "Modifier les visages",
   "edit_import_path": "Modifier le chemin d'importation",
@@ -1128,7 +1128,7 @@
   "library_page_sort_last_modified": "Dernière modification",
   "library_page_sort_title": "Titre de l'album",
   "light": "Clair",
-  "like_deleted": "Réaction « j'aime » supprimée",
+  "like_deleted": "Réaction « j'aime » supprimée",
   "link_motion_video": "Lier la photo animée",
   "link_options": "Options de lien",
   "link_to_oauth": "Lien au service OAuth",
@@ -1575,7 +1575,7 @@
   "search_for_existing_person": "Rechercher une personne existante",
   "search_no_more_result": "Plus de résultats",
   "search_no_people": "Aucune personne",
-  "search_no_people_named": "Aucune personne nommée « {name} »",
+  "search_no_people_named": "Aucune personne nommée « {name} »",
   "search_no_result": "Aucun résultat trouvé, essayez un autre terme de recherche ou une autre combinaison",
   "search_options": "Rechercher une option",
   "search_page_categories": "Catégories",
@@ -1968,5 +1968,9 @@
   "errors.failed_to_load_tags": "Échec du chargement des étiquettes",
   "errors.failed_to_create_dynamic_album": "Échec de la création de l'album dynamique",
   "errors.failed_to_update_dynamic_album": "Échec de la mise à jour de l'album dynamique",
-  "unnamed_dynamic_album": "Album dynamique sans nom"
+  "unnamed_dynamic_album": "Album dynamique sans nom",
+  "delete_dynamic_album": "Supprimer l'album dynamique",
+  "delete_dynamic_album_prompt": "Êtes-vous sûr de vouloir supprimer l'album dynamique '{name}' ? Cette action est irréversible.",
+  "delete": "Supprimer",
+  "cancel": "Annuler"
 }
