--- a/i18n/en.json
+++ b/i18n/en.json
@@ -445,9 +445,25 @@
   "no_assets_found": "No assets found",
   "showing_first_n_items": "Showing first {count} of {total} items",
   "filter_type_tag": "Tag Filter",
+  "filter_type_person": "Person Filter",
+  "filter_type_location": "Location Filter",
+  "filter_type_date_range": "Date Range Filter",
+  "filter_type_asset_type": "Asset Type Filter",
+  "filter_type_metadata": "Metadata Filter",
   "operator_and": "AND",
   "operator_or": "OR",
   "tags": "tags",
+  "people": "people",
+  "cities": "cities",
+  "countries": "countries",
+  "states": "states",
+  "date_range": "date range",
+  "asset_types": "asset types",
+  "favorites": "favorites",
+  "images": "images",
+  "videos": "videos",
+  "yes": "Yes",
+  "no": "No",
   "failed_to_load_dynamic_albums": "Failed to load dynamic albums",
   "failed_to_load_shared_dynamic_albums": "Failed to load shared dynamic albums",
   "failed_to_create_dynamic_album": "Failed to create dynamic album",
