--- a/i18n/en.json
+++ b/i18n/en.json
@@ -475,6 +475,9 @@
   "failed_to_share_dynamic_album": "Failed to share dynamic album",
   "failed_to_update_dynamic_album_share": "Failed to update dynamic album share",
   "failed_to_remove_dynamic_album_share": "Failed to remove dynamic album share",
+  "share_with_users": "Share with users",
+  "dynamic_album_with_link_access": "Dynamic album with link access",
+  "public_dynamic_album": "Public dynamic album",
   "albums_default_sort_order": "Default album sort order",
   "albums_default_sort_order_description": "Initial asset sort order when creating new albums.",
   "albums_feature_description": "Collections of assets that can be shared with other users.",
