create album modal

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -405,6 +405,7 @@
   "albums": "Albums",
   "albums_count": "{count, plural, one {{count, number} Album} other {{count, number} Albums}}",
   "enter_album_name": "Enter album name",
+  "enter_album_description": "Enter album description",
   "role_editor": "Editor",
   "role_viewer": "Viewer",
   "remove_user": "Remove user",
@@ -458,6 +459,7 @@
   "all_albums": "All albums",
   "all_people": "All people",
   "all_videos": "All videos",
+  "album_type": "Album Type",
   "allow_dark_mode": "Allow dark mode",
   "allow_edits": "Allow edits",
   "allow_public_user_to_download": "Allow public user to download",
@@ -529,6 +531,7 @@
   "assets_trashed_count": "Trashed {count, plural, one {# asset} other {# assets}}",
   "assets_trashed_from_server": "{count} asset(s) trashed from the Immich server",
   "assets_were_part_of_album_count": "{count, plural, one {Asset was} other {Assets were}} already part of the album",
+  "assets_will_be_added": "{count, plural, one {# asset} other {# assets}} will be added to this album",
   "authorized_devices": "Authorized Devices",
   "automatic_endpoint_switching_subtitle": "Connect locally over designated Wi-Fi when available and use alternative connections elsewhere",
   "automatic_endpoint_switching_title": "Automatic URL switching",
@@ -724,7 +727,10 @@
   "covers": "Covers",
   "create": "Create",
   "create_album": "Create album",
+  "create_album_description": "Create a new album to organize your photos",
   "create_album_page_untitled": "Untitled",
+  "create_dynamic_album": "Create dynamic album",
+  "create_dynamic_album_description": "Create a smart album that automatically includes photos based on filters",
   "create_library": "Create Library",
   "create_link": "Create link",
   "create_link_to_share": "Create link to share",
@@ -834,6 +840,10 @@
   "duplicates": "Duplicates",
   "duplicates_description": "Resolve each group by indicating which, if any, are duplicates",
   "duration": "Duration",
+  "dynamic_album": "Dynamic album",
+  "dynamic_album_created": "Dynamic album '{album}' created",
+  "album_created_success": "Album '{album}' created",
+  "dynamic_album_type_description": "Automatically includes photos based on filter criteria",
   "edit": "Edit",
   "edit_album": "Edit album",
   "edit_avatar": "Edit avatar",
@@ -901,6 +911,7 @@
     "error_selecting_all_assets": "Error selecting all assets",
     "exclusion_pattern_already_exists": "This exclusion pattern already exists.",
     "failed_to_create_album": "Failed to create album",
+    "failed_to_create_dynamic_album": "Failed to create dynamic album",
     "failed_to_create_shared_link": "Failed to create shared link",
     "failed_to_edit_shared_link": "Failed to edit shared link",
     "failed_to_get_people": "Failed to get people",
@@ -1540,6 +1551,8 @@
   "refreshing_faces": "Refreshing faces",
   "refreshing_metadata": "Refreshing metadata",
   "regenerating_thumbnails": "Regenerating thumbnails",
+  "regular_album": "Regular album",
+  "regular_album_type_description": "Manually add and organize photos in this album",
   "remove": "Remove",
   "remove_assets_album_confirmation": "Are you sure you want to remove {count, plural, one {# asset} other {# assets}} from the album?",
   "remove_assets_shared_link_confirmation": "Are you sure you want to remove {count, plural, one {# asset} other {# assets}} from this shared link?",
@@ -2013,6 +2026,7 @@
   "your_wifi_name": "Your Wi-Fi name",
   "zoom_image": "Zoom Image",
   "select_tags": "Select Tags",
+  "select_tags_for_dynamic_album": "Select tags to include photos with these tags",
   "selected_tags": "Selected Tags",
   "search_tags": "Search tags...",
   "remove_tag": "Remove tag",
