--- a/i18n/en.json
+++ b/i18n/en.json
@@ -840,6 +840,7 @@
   "duplicates": "Duplicates",
   "duplicates_description": "Resolve each group by indicating which, if any, are duplicates",
   "duration": "Duration",
+  "dynamic": "Dynamic",
   "dynamic_album": "Dynamic album",
   "dynamic_album_created": "Dynamic album '{album}' created",
   "album_created_success": "Album '{album}' created",
@@ -1059,6 +1060,8 @@
   "filter": "Filter",
   "filter_people": "Filter people",
   "filter_places": "Filter places",
+  "filters": "Filters",
+  "filters_count": "{count} filters",
   "find_them_fast": "Find them fast by name with search",
   "fix_incorrect_match": "Fix incorrect match",
   "folder": "Folder",
