--- a/i18n/en.json
+++ b/i18n/en.json
@@ -37,6 +37,10 @@
   "add_upload_to_stack": "Add upload to stack",
   "add_url": "Add URL",
   "added_to_archive": "Added to archive",
+  "all_and": "All (AND)",
+  "any_or": "Any (OR)",
+  "assets_matching_all_filters_shown": "Assets matching all filters are shown",
+  "assets_matching_any_filter_shown": "Assets matching any filter are shown",
   "added_to_favorites": "Added to favorites",
   "added_to_favorites_count": "Added {count, number} to favorites",
   "admin": {
@@ -551,6 +555,7 @@
   "asset_uploading": "Uploading…",
   "asset_viewer_settings_subtitle": "Manage your gallery viewer settings",
   "asset_viewer_settings_title": "Asset Viewer",
+  "asset_type": "Asset type",
   "assets": "Assets",
   "assets_added_count": "Added {count, plural, one {# asset} other {# assets}}",
   "assets_added_to_album_count": "Added {count, plural, one {# asset} other {# assets}} to the album",
@@ -653,6 +658,7 @@
   "backup_setting_subtitle": "Manage background and foreground upload settings",
   "backup_settings_subtitle": "Manage upload settings",
   "backward": "Backward",
+  "basic_info": "Basic info",
   "biometric_auth_enabled": "Biometric authentication enabled",
   "biometric_locked_out": "You are locked out of biometric authentication",
   "biometric_no_options": "No biometric options available",
@@ -683,6 +689,7 @@
   "cache_settings_title": "Caching Settings",
   "camera": "Camera",
   "camera_brand": "Camera brand",
+  "camera_make": "Camera make",
   "camera_model": "Camera model",
   "cancel": "Cancel",
   "cancel_search": "Cancel search",
@@ -784,6 +791,7 @@
   "create": "Create",
   "create_album": "Create album",
   "create_album_page_untitled": "Untitled",
+  "create_dynamic_album": "Create dynamic album",
   "create_api_key": "Create API key",
   "create_library": "Create Library",
   "create_link": "Create link",
@@ -862,6 +870,7 @@
   "description": "Description",
   "description_input_hint_text": "Add description...",
   "description_input_submit_error": "Error updating description, check the log for more details",
+  "describe_dynamic_album": "Describe this dynamic album (optional)",
   "deselect_all": "Deselect All",
   "details": "Details",
   "direction": "Direction",
@@ -901,6 +910,9 @@
   "downloading_asset_filename": "Downloading asset {filename}",
   "downloading_media": "Downloading media",
   "drop_files_to_upload": "Drop files anywhere to upload",
+  "dynamic_album": "Dynamic album",
+  "dynamic_album_requires_filters_warning": "At least one filter must be selected to create a dynamic album",
+  "dynamic_filters": "Dynamic filters",
   "duplicates": "Duplicates",
   "duplicates_description": "Resolve each group by indicating which, if any, are duplicates",
   "duration": "Duration",
@@ -917,6 +929,7 @@
   "edit_description_prompt": "Please select a new description:",
   "edit_exclusion_pattern": "Edit exclusion pattern",
   "edit_faces": "Edit faces",
+  "edit_filters": "Edit filters",
   "edit_key": "Edit key",
   "edit_link": "Edit link",
   "edit_location": "Edit location",
@@ -943,6 +956,13 @@
   "enabled": "Enabled",
   "end_date": "End date",
   "enqueued": "Enqueued",
+  "enter_camera_make": "Enter camera make",
+  "enter_camera_model": "Enter camera model",
+  "enter_city": "Enter city",
+  "enter_country": "Enter country",
+  "enter_lens_model": "Enter lens model",
+  "enter_location": "Enter location",
+  "enter_state": "Enter state",
   "enter_wifi_name": "Enter Wi-Fi name",
   "enter_your_pin_code": "Enter your PIN code",
   "enter_your_pin_code_subtitle": "Enter your PIN code to access the locked folder",
@@ -966,6 +986,7 @@
     "cant_get_number_of_comments": "Can't get number of comments",
     "cant_search_people": "Can't search people",
     "cant_search_places": "Can't search places",
+    "album_name_required": "Album name is required",
     "error_adding_assets_to_album": "Error adding assets to album",
     "error_adding_users_to_album": "Error adding users to album",
     "error_deleting_shared_user": "Error deleting shared user",
@@ -973,6 +994,7 @@
     "error_hiding_buy_button": "Error hiding buy button",
     "error_removing_assets_from_album": "Error removing assets from album, check console for more details",
     "error_selecting_all_assets": "Error selecting all assets",
+    "dynamic_album_requires_filters": "At least one filter is required for dynamic albums",
     "exclusion_pattern_already_exists": "This exclusion pattern already exists.",
     "failed_to_create_album": "Failed to create album",
     "failed_to_create_shared_link": "Failed to create shared link",
@@ -1013,6 +1035,7 @@
     "unable_to_connect": "Unable to connect",
     "unable_to_copy_to_clipboard": "Cannot copy to clipboard, make sure you are accessing the page through https",
     "unable_to_create_admin_account": "Unable to create admin account",
+    "unable_to_create_album": "Unable to create album",
     "unable_to_create_api_key": "Unable to create a new API Key",
     "unable_to_create_library": "Unable to create library",
     "unable_to_create_user": "Unable to create user",
@@ -1066,6 +1089,7 @@
     "unable_to_unlink_account": "Unable to unlink account",
     "unable_to_unlink_motion_video": "Unable to unlink motion video",
     "unable_to_update_album_cover": "Unable to update album cover",
+    "unable_to_update_album_filters": "Unable to update album filters",
     "unable_to_update_album_info": "Unable to update album info",
     "unable_to_update_library": "Unable to update library",
     "unable_to_update_location": "Unable to update location",
@@ -1114,8 +1138,10 @@
   "favorite_or_unfavorite_photo": "Favorite or unfavorite photo",
   "favorites": "Favorites",
   "favorites_page_no_favorites": "No favorite assets found",
+  "favorites_only": "Favorites only",
   "feature_photo_updated": "Feature photo updated",
   "features": "Features",
+  "filters": "Filters",
   "features_in_development": "Features in Development",
   "features_setting_description": "Manage the app features",
   "file_name": "File name",
@@ -1124,6 +1150,7 @@
   "filename": "Filename",
   "filetype": "Filetype",
   "filter": "Filter",
+  "filter_operator": "Filter operator",
   "filter_people": "Filter people",
   "filter_places": "Filter places",
   "find_them_fast": "Find them fast by name with search",
@@ -1256,6 +1283,9 @@
   "language_setting_description": "Select your preferred language",
   "large_files": "Large Files",
   "last": "Last",
+  "last_month": "Last month",
+  "last_week": "Last week",
+  "last_year": "Last year",
   "last_months": "{count, plural, one {Last month} other {Last # months}}",
   "last_seen": "Last seen",
   "latest_version": "Latest Version",
@@ -1299,6 +1329,7 @@
   "location_picker_latitude_hint": "Enter your latitude here",
   "location_picker_longitude_error": "Enter a valid longitude",
   "location_picker_longitude_hint": "Enter your longitude here",
+  "location_search": "Location search",
   "lock": "Lock",
   "locked_folder": "Locked Folder",
   "log_detail_title": "Log Detail",
@@ -1385,6 +1416,8 @@
   "marked_all_as_read": "Marked all as read",
   "matches": "Matches",
   "matching_assets": "Matching Assets",
+  "match_all_filters": "Match all filters",
+  "match_any_filter": "Match any filter",
   "media_type": "Media type",
   "memories": "Memories",
   "memories_all_caught_up": "All caught up",
@@ -1394,6 +1427,8 @@
   "memories_swipe_to_close": "Swipe up to close",
   "memory": "Memory",
   "memory_lane_title": "Memory Lane {title}",
+  "metadata": "Metadata",
+  "metadata_filters": "Metadata filters",
   "menu": "Menu",
   "merge": "Merge",
   "merge_people": "Merge people",
@@ -1483,6 +1518,7 @@
   "not_selected": "Not selected",
   "note_apply_storage_label_to_previously_uploaded assets": "Note: To apply the Storage Label to previously uploaded assets, run the",
   "notes": "Notes",
+  "non_favorites": "Non-favorites",
   "nothing_here_yet": "Nothing here yet",
   "notification_permission_dialog_content": "To enable notifications, go to Settings and select allow.",
   "notification_permission_list_tile_content": "Grant permission to enable notifications.",
@@ -1515,6 +1551,7 @@
   "open_in_openstreetmap": "Open in OpenStreetMap",
   "open_the_search_filters": "Open the search filters",
   "options": "Options",
+  "optional": "optional",
   "or": "or",
   "organize_into_albums": "Organize into albums",
   "organize_into_albums_description": "Put existing photos into albums using current sync settings",
@@ -1820,6 +1857,7 @@
   "search_places": "Search places",
   "search_rating": "Search by rating...",
   "search_result_page_new_search_hint": "New Search",
+  "search_results": "Search results",
   "search_settings": "Search settings",
   "search_state": "Search state...",
   "search_suggestion_list_smart_search_hint_1": "Smart search is enabled by default, to search for metadata use the syntax ",
@@ -1966,6 +2004,7 @@
   "show_album_options": "Show album options",
   "show_albums": "Show albums",
   "show_all_people": "Show all people",
+  "show_all_types": "Show all types",
   "show_and_hide_people": "Show & hide people",
   "show_file_location": "Show file location",
   "show_gallery": "Show gallery",
@@ -2012,6 +2051,7 @@
   "stack_select_one_photo": "Select one main photo for the stack",
   "stack_selected_photos": "Stack selected photos",
   "stacked_assets_count": "Stacked {count, plural, one {# asset} other {# assets}}",
+  "stars": "stars",
   "stacktrace": "Stacktrace",
   "start": "Start",
   "start_date": "Start date",
@@ -2127,6 +2167,7 @@
   "unmute_memories": "Unmute Memories",
   "unnamed_album": "Unnamed Album",
   "unnamed_album_delete_confirmation": "Are you sure you want to delete this album?",
+  "unnamed_person": "Unnamed Person",
   "unnamed_share": "Unnamed Share",
   "unsaved_change": "Unsaved change",
   "unselect_all": "Unselect all",
@@ -2162,6 +2203,8 @@
   "use_biometric": "Use biometric",
   "use_current_connection": "use current connection",
   "use_custom_date_range": "Use custom date range instead",
+  "use_structured": "Use structured search",
+  "use_text_search": "Use text search",
   "user": "User",
   "user_has_been_deleted": "This user has been deleted.",
   "user_id": "User ID",
